@@ -1,3 +1,8 @@
+2004-03-12  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/cellrenderercustom/cellrendererpopup.cc: Removed some 
+	accidentally pasted text that breaks the build.
+
 2004-03-11  Murray Cumming  <murrayc@murrayc.com>
 
 	* demos/gtk-demo/demowindow.cc: Added #ifdef GLIBMM_COMPILER_SUN_FORTE
